--- a/conf/battle/drops.conf
+++ b/conf/battle/drops.conf
@@ -38,55 +38,55 @@ mvp_item_third_get_time: 2000
 // Item drop rates (Note 2)
 
 // The rate the common items are dropped (Items that are in the ETC tab, besides card)
-item_rate_common: 100000000
-item_rate_common_boss: 100000000
-item_rate_common_mvp: 100000000
-item_drop_common_min: 1
+item_rate_common: 10000
+item_rate_common_boss: 10000
+item_rate_common_mvp: 10000
+item_drop_common_min: 100000000
 item_drop_common_max: 10000
 
 // The rate healing items are dropped (items that restore HP or SP)
-item_rate_heal: 100000000
-item_rate_heal_boss: 100000000
-item_rate_heal_mvp: 100000000
-item_drop_heal_min: 1
+item_rate_heal: 10000
+item_rate_heal_boss: 10000
+item_rate_heal_mvp: 10000
+item_drop_heal_min: 10000
 item_drop_heal_max: 10000
 
 // The rate at which usable items (in the item tab) other then healing items are dropped.
-item_rate_use: 100000000
-item_rate_use_boss: 100000000
-item_rate_use_mvp: 100000000
-item_drop_use_min: 1
+item_rate_use: 10000
+item_rate_use_boss: 10000
+item_rate_use_mvp: 10000
+item_drop_use_min: 10000
 item_drop_use_max: 10000
 
 // The rate at which equipment is dropped.
-item_rate_equip: 100000000
-item_rate_equip_boss: 100000000
-item_rate_equip_mvp: 100000000
-item_drop_equip_min: 1
+item_rate_equip: 10000
+item_rate_equip_boss: 10000
+item_rate_equip_mvp: 10000
+item_drop_equip_min: 10000
 item_drop_equip_max: 10000
 
 // The rate at which cards are dropped
-item_rate_card: 100000000
-item_rate_card_boss: 100000000
-item_rate_card_mvp: 100000000
-item_drop_card_min: 1
+item_rate_card: 10000
+item_rate_card_boss: 10000
+item_rate_card_mvp: 10000
+item_drop_card_min: 10000
 item_drop_card_max: 10000
 
 // The rate adjustment for the MVP items that the MVP gets directly in their inventory
 // Mode: 0 - official order, 1 - random order, 2 - all items
-item_rate_mvp: 100000000
-item_drop_mvp_min: 1
+item_rate_mvp: 10000
+item_drop_mvp_min: 10000
 item_drop_mvp_max: 10000
-item_drop_mvp_mode: 0
+item_drop_mvp_mode: 2
 
 // The rate adjustment for card-granted item drops.
-item_rate_adddrop: 100000000
-item_drop_add_min: 1
+item_rate_adddrop: 10000
+item_drop_add_min: 10000
 item_drop_add_max: 10000
 
 // Rate adjustment for Treasure Box drops (these override all other modifiers)
-item_rate_treasure: 100000000
-item_drop_treasure_min: 1
+item_rate_treasure: 10000
+item_drop_treasure_min: 10000
 item_drop_treasure_max: 10000
 
 // Use logarithmic drops? (Note 1)
@@ -108,11 +108,11 @@ item_drop_treasure_max: 10000
 //10000 | 1.00 1.67  3.25  5.28  8.44 15.24 23.19 34.26 54.57 72.67 91.13
 //20000 | 2.00 3.26  6.09  9.59 14.83 25.49 37.21 52.55 77.70 97.95  100%
 //50000 | 5.00 7.87 13.98 21.12 31.23 50.31 69.56 92.48  100%  100%  100%
-item_logarithmic_drops: no
+item_logarithmic_drops: yes
 
 // Can the monster's drop rate become 0? (Note 1)
 // Default: no (as in official servers).
-drop_rate0item: no
+drop_rate0item: yse
 
 // Increase item drop rate +0.01%? (Note 1)
 // On official servers it is possible to get 0.00% drop chance so all items are increased by 0.01%.
@@ -138,7 +138,7 @@ finding_ore_rate: 100
 // 0: Nothing drops.
 // 1: Only marine spheres drop items.
 // 2: All alchemist summons drop items.
-alchemist_summon_reward: 1
+alchemist_summon_reward: 2
 
 // Make broadcast ** Player1 won Pupa's Pupa Card (chance 0.01%) ***
 // This can be set to any value between 0~10000.
@@ -147,7 +147,7 @@ alchemist_summon_reward: 1
 // 1 = show announces for 0.01% drop chance items
 // 333 = show announces for 3.33% or lower drop chance items
 // 10000 = show announces for all items
-rare_drop_announce: 0
+rare_drop_announce: 10000
 
 // Does autoloot take into account player bonuses and penalties? (Note 1)
 // If RENEWAL_DROP, Bubble Gum, or any other modifiers are active autoloot
@@ -187,8 +187,8 @@ mer_idle_no_share: no
 idletime_mer_option: 0x1F
 
 // If drop rate was below this amount and bonus is applied to it, the bonus can't make it exceed this amount.
-drop_rate_cap: 9000
-drop_rate_cap_vip: 9000
+drop_rate_cap: 900000
+drop_rate_cap_vip: 900000
 
 // Displays a colored pillar effect for items dropped by monsters that contain random options.
 rndopt_drop_pillar: on
