--- a/conf/battle/drops.conf
+++ b/conf/battle/drops.conf
@@ -41,7 +41,7 @@ mvp_item_third_get_time: 2000
 item_rate_common: 10000
 item_rate_common_boss: 10000
 item_rate_common_mvp: 10000
-item_drop_common_min: 100000000
+item_drop_common_min: 10000
 item_drop_common_max: 10000
 
 // The rate healing items are dropped (items that restore HP or SP)
@@ -187,8 +187,8 @@ mer_idle_no_share: no
 idletime_mer_option: 0x1F
 
 // If drop rate was below this amount and bonus is applied to it, the bonus can't make it exceed this amount.
-drop_rate_cap: 900000
-drop_rate_cap_vip: 900000
+drop_rate_cap: 10000
+drop_rate_cap_vip: 10000
 
 // Displays a colored pillar effect for items dropped by monsters that contain random options.
 rndopt_drop_pillar: on
