--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -4,8 +4,9 @@
 //      All the custom scripts, remove the '//' to enable...     
 //      Place your scripts here!
 
-//npc: npc/location/to/script.txt
-
+// ----------------------- Addon Scripts -----------------------
+npc: npc/custom/addon/mts.txt
+npc: npc/custom/addon/hat_maker.txt
 // ----------------------- Basic Scripts -----------------------
 npc: npc/custom/warper.txt
 npc: npc/custom/jobmaster.txt
@@ -14,7 +15,7 @@ npc: npc/custom/healer.txt
 //npc: npc/custom/breeder.txt
 //npc: npc/custom/card_seller.txt
 //npc: npc/custom/itemmall.txt
-//npc: npc/custom/stylist.txt
+npc: npc/custom/stylist.txt
 //npc: npc/custom/resetnpc.txt
 npc: npc/custom/card_remover.txt
 //npc: npc/custom/item_signer.txt
