Add freebie and mir4 npc

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -7,6 +7,8 @@
 // ----------------------- Addon Scripts -----------------------
 npc: npc/custom/addon/mts.txt
 npc: npc/custom/addon/hat_maker.txt
+npc: npc/custom/addon/freebie_npc.txt
+npc: npc/custom/addon/Mir4_Enchant_th.txt
 // ----------------------- Basic Scripts -----------------------
 npc: npc/custom/warper.txt
 npc: npc/custom/jobmaster.txt
