--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -9,6 +9,7 @@ npc: npc/custom/addon/mts.txt
 npc: npc/custom/addon/hat_maker.txt
 npc: npc/custom/addon/freebie_npc.txt
 npc: npc/custom/addon/Mir4_Enchant_th.txt
+npc: npc/custom/addon/tool_dealer_c.txt
 // ----------------------- Basic Scripts -----------------------
 npc: npc/custom/warper.txt
 npc: npc/custom/jobmaster.txt
