--- a/db/pre-re/item_db_etc.yml
+++ b/db/pre-re/item_db_etc.yml
@@ -4376,6 +4376,8 @@ Body:
       BuyingStore: true
     Script: |
       bonus bRestartFullRecover;
+      bonus bMaxHPrate,15;
+      bonus bMaxSPrate,5;
   - Id: 4145
     AegisName: Berzebub_Card
     Name: Berzebub Card
