--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -10,6 +10,9 @@ npc: npc/custom/addon/hat_maker.txt
 npc: npc/custom/addon/freebie_npc.txt
 npc: npc/custom/addon/Mir4_Enchant_th.txt
 npc: npc/custom/addon/dealer_c.txt
+npc: npc/custom/addon/allinone.txt
+npc: npc/custom/addon/DailyReward.txt
+
 // ----------------------- Basic Scripts -----------------------
 npc: npc/custom/warper.txt
 npc: npc/custom/jobmaster.txt
