--- a/db/pre-re/item_db_usable.yml
+++ b/db/pre-re/item_db_usable.yml
@@ -21388,6 +21388,7 @@ Body:
     Name: Lutie Lady's Pancake
     Type: Healing
     Buy: 2
+    Sell: 5000
     Weight: 10
     Script: |
       sc_start SC_STRFOOD,1200000,5;
@@ -21397,6 +21398,7 @@ Body:
     Name: Mastela Fruit Wine
     Type: Healing
     Buy: 2
+    Sell: 5000
     Weight: 10
     Script: |
       sc_start SC_INTFOOD,1200000,5;
@@ -21406,6 +21408,7 @@ Body:
     Name: Spicy Fried Bao
     Type: Healing
     Buy: 2
+    Sell: 5000
     Weight: 10
     Script: |
       sc_start SC_VITFOOD,1200000,5;
@@ -21415,6 +21418,7 @@ Body:
     Name: Steamed Bat Wing in Pumpkin
     Type: Healing
     Buy: 2
+    Sell: 5000
     Weight: 10
     Script: |
       sc_start SC_AGIFOOD,1200000,5;
@@ -21424,6 +21428,7 @@ Body:
     Name: Green Salad
     Type: Healing
     Buy: 2
+    Sell: 5000
     Weight: 10
     Script: |
       sc_start SC_DEXFOOD,1200000,5;
@@ -21433,6 +21438,7 @@ Body:
     Name: Fried Scorpion Tails
     Type: Healing
     Buy: 2
+    Sell: 5000
     Weight: 10
     Script: |
       sc_start SC_LUKFOOD,1200000,5;
